# codroid-api

./: .env.example  README.md  README.uk.md  SECURITY.md  basics.har  pyproject.toml
codroid_api/: __init__.py  auto_socket.py  capture.py  client.py  commands.py  onrobot.py  robot_session.py  settings.py
docs/: emergency_handling.md
examples/: basic_usage.py  button_listener.py  coordinate_calibration.py  cycle_safe_and_origin.py  dash_app.py  emergency_handling.py  emergency_stop_test.py  inspect_capture.py  move_to_coordinate_origin.py  point_loop.py  replay_capture.py  stream_events.py  test_auto_mode_loop.py  test_emergency_button.py  test_emergency_handling.py  test_overspeed_joint_protection.py  test_rescue_mode.py
tests/: test_auto_socket.py  test_control_handoff.py  test_onrobot_integration.py
