[project]
name = "codroid-api"
version = "0.1.0"
description = "Python API client for Codroid websocket control."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Codroid API Contributors" }]
dependencies = [
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "websockets>=12.0",
]

[project.urls]
Repository = "https://github.com/profi-robotics/codroid-api"

[project.optional-dependencies]
examples = ["dash>=3.3.0"]

[tool.uv]
package = true

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codroid_api"]
